@@ -23,7 +23,9 @@ import hu.bme.mit.theta.solver.smtlib.impl.bitwuzla.BitwuzlaSmtLibSolverInstalle
 import hu.bme.mit.theta.solver.smtlib.impl.boolector.BoolectorSmtLibSolverInstaller;
 import hu.bme.mit.theta.solver.smtlib.impl.cvc4.CVC4SmtLibSolverInstaller;
 import hu.bme.mit.theta.solver.smtlib.impl.cvc5.CVC5SmtLibSolverInstaller;
+import hu.bme.mit.theta.solver.smtlib.impl.eldarica.EldaricaSmtLibSolverInstaller;
 import hu.bme.mit.theta.solver.smtlib.impl.generic.GenericSmtLibSolverInstaller;
+import hu.bme.mit.theta.solver.smtlib.impl.golem.GolemSmtLibSolverInstaller;
 import hu.bme.mit.theta.solver.smtlib.impl.mathsat.MathSATSmtLibSolverInstaller;
 import hu.bme.mit.theta.solver.smtlib.impl.princess.PrincessSmtLibSolverInstaller;
 import hu.bme.mit.theta.solver.smtlib.impl.smtinterpol.SMTInterpolSmtLibSolverInstaller;
@@ -48,17 +50,6 @@ public final class SmtLibSolverManager extends SolverManager {
     private static final Map<String, Class<? extends SmtLibSolverInstaller>> installerDeclarations = new HashMap<>();
     private static Tuple2<String, Class<? extends GenericSmtLibSolverInstaller>> genericInstallerDeclaration;
 
-    public static <T extends SmtLibSolverInstaller> void registerInstaller(final String name,
-                                                                           final Class<T> decl) {
-        installerDeclarations.put(name, decl);
-    }
-
-    public static <T extends GenericSmtLibSolverInstaller> void registerGenericInstaller(
-            final String name, final Class<T> decl) {
-        checkState(genericInstallerDeclaration == null);
-        genericInstallerDeclaration = Tuple2.of(name, decl);
-    }
-
     static {
         registerInstaller("z3", Z3SmtLibSolverInstaller.class);
         registerInstaller("cvc4", CVC4SmtLibSolverInstaller.class);
@@ -68,48 +59,18 @@ public final class SmtLibSolverManager extends SolverManager {
         registerInstaller("bitwuzla", BitwuzlaSmtLibSolverInstaller.class);
         registerInstaller("smtinterpol", SMTInterpolSmtLibSolverInstaller.class);
         registerInstaller("princess", PrincessSmtLibSolverInstaller.class);
+        registerInstaller("eldarica", EldaricaSmtLibSolverInstaller.class);
+        registerInstaller("golem", GolemSmtLibSolverInstaller.class);
         registerGenericInstaller("generic", GenericSmtLibSolverInstaller.class);
     }
 
-    public static String getSolverName(final String name) {
-        final var solverName = decodeSolverName(name, 0);
-        if (solverName != null) {
-            return solverName;
-        } else {
-            throw new IllegalArgumentException("Invalid version string: " + name);
-        }
-    }
-
-    public static String getSolverVersion(final String name) {
-        final var solverVersion = decodeSolverName(name, 1);
-        if (solverVersion != null) {
-            return solverVersion;
-        } else {
-            throw new IllegalArgumentException("Invalid version string: " + name);
-        }
-    }
-
-    private static String decodeSolverName(final String name, final int part) {
-        final var versionArr = name.split(":");
-
-        if (versionArr.length != 2) {
-            return null;
-        }
-
-        return versionArr[part];
-    }
-
     private final Path home;
-    private final Logger logger;
-
     private final Map<String, SmtLibSolverInstaller> installers;
     private final Tuple2<String, GenericSmtLibSolverInstaller> genericInstaller;
-
-    private boolean closed = false;
     private final Set<SolverBase> instantiatedSolvers;
+    private boolean closed = false;
 
     private SmtLibSolverManager(final Path home, final Logger logger) {
-        this.logger = logger;
         checkNotNull(home);
         checkArgument(Files.exists(home), "Home directory does not exist");
 
@@ -144,10 +105,55 @@ public final class SmtLibSolverManager extends SolverManager {
         this.instantiatedSolvers = new HashSet<>();
     }
 
+    public static <T extends SmtLibSolverInstaller> void registerInstaller(final String name,
+                                                                           final Class<T> decl) {
+        installerDeclarations.put(name, decl);
+    }
+
+    public static <T extends GenericSmtLibSolverInstaller> void registerGenericInstaller(
+            final String name, final Class<T> decl) {
+        checkState(genericInstallerDeclaration == null);
+        genericInstallerDeclaration = Tuple2.of(name, decl);
+    }
+
+    public static String getSolverName(final String name) {
+        final var solverName = decodeSolverName(name, 0);
+        if (solverName != null) {
+            return solverName;
+        } else {
+            throw new IllegalArgumentException("Invalid version string: " + name);
+        }
+    }
+
+    public static String getSolverVersion(final String name) {
+        final var solverVersion = decodeSolverName(name, 1);
+        if (solverVersion != null) {
+            return solverVersion;
+        } else {
+            throw new IllegalArgumentException("Invalid version string: " + name);
+        }
+    }
+
+    private static String decodeSolverName(final String name, final int part) {
+        final var versionArr = name.split(":");
+
+        if (versionArr.length != 2) {
+            return null;
+        }
+
+        return versionArr[part];
+    }
+
     public static SmtLibSolverManager create(final Path home, final Logger logger)
             throws IOException {
-        createIfNotExists(home);
-        return new SmtLibSolverManager(home, logger);
+        return new SmtLibSolverManager(createIfNotExists(home), logger);
+    }
+
+    private static Path createIfNotExists(final Path path) throws IOException {
+        if (!Files.exists(path)) {
+            Files.createDirectory(path);
+        }
+        return path;
     }
 
     public String getGenericInstallerName() {
@@ -304,16 +310,16 @@ public final class SmtLibSolverManager extends SolverManager {
         return installers.get(solver).getInstalledVersions(home.resolve(solver));
     }
 
-    private String getVersionString(final String solver, final String version,
-                                    final boolean installed) throws SmtLibSolverInstallerException {
+    public String getVersionString(final String solver, final String version,
+                                   final boolean installed) throws SmtLibSolverInstallerException {
         if (!version.equals("latest")) {
             return version;
         } else {
             final var supportedVersions = getSupportedVersions(solver);
             final var versions = installed ? getInstalledVersions(solver).stream()
-                    .filter(supportedVersions::contains).collect(Collectors.toList())
+                    .filter(supportedVersions::contains).toList()
                     : supportedVersions;
-            if (versions.size() > 0) {
+            if (!versions.isEmpty()) {
                 return versions.get(0);
             } else {
                 throw new SmtLibSolverInstallerException(
@@ -321,13 +327,6 @@ public final class SmtLibSolverManager extends SolverManager {
                                 installed ? "installed" : "supported", solver));
             }
         }
-    }
-
-    private static Path createIfNotExists(final Path path) throws IOException {
-        if (!Files.exists(path)) {
-            Files.createDirectory(path);
-        }
-        return path;
     }
 
     @Override
@@ -366,6 +365,14 @@ public final class SmtLibSolverManager extends SolverManager {
         public ItpSolver createItpSolver() {
             checkState(!closed, "Solver manager was closed");
             final var solver = solverFactory.createItpSolver();
+            instantiatedSolvers.add(solver);
+            return solver;
+        }
+
+        @Override
+        public HornSolver createHornSolver() {
+            checkState(!closed, "Solver manager was closed");
+            final var solver = solverFactory.createHornSolver();
             instantiatedSolvers.add(solver);
             return solver;
         }
